[package]
name = "simrng"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.12", features = ["headers"]}
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
tokio = {version = "1.26", features = ["full"]}
tower-http = {version = "0.3.0", features = ["cors"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
special-fun = "0.2.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
